@@ -18,7 +18,6 @@
 package io.vertigo.studio.plugins.generator.vertigo.domain.js.model;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.vertigo.core.lang.Assertion;
 import io.vertigo.studio.notebook.domain.DtSketch;
@@ -47,7 +46,7 @@ public final class JSDtModel {
 				.stream()
 				.filter(dtField -> DtSketchField.FieldType.COMPUTED != dtField.getType())
 				.map(JSStudioDtFieldModel::new)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	/**
