@@ -18,7 +18,6 @@
 package io.vertigo.studio.plugins.generator.vertigo.search.model;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.vertigo.core.lang.Assertion;
 import io.vertigo.studio.notebook.domain.DtSketchField;
@@ -44,7 +43,7 @@ public final class IndexCopyToModel {
 		return fromFields
 				.stream()
 				.map(DtSketchField::getName)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 }
