@@ -24,7 +24,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import io.vertigo.core.lang.Assertion;
 import io.vertigo.core.lang.Cardinality;
@@ -182,7 +181,7 @@ public final class DomainUtil {
 		return sketchCollection
 				.stream()
 				.sorted(Comparator.comparing(dt -> dt.getKey().getName()))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	/**
@@ -204,7 +203,7 @@ public final class DomainUtil {
 		return associationCollection
 				.stream()
 				.sorted(Comparator.comparing(dt -> dt.getKey().getName()))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public static String getSimpleNameFromCanonicalName(final String canonicalClassName) {
