@@ -19,7 +19,6 @@ package io.vertigo.studio.plugins.source.vertigo.factories;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.vertigo.core.lang.WrappedException;
 import io.vertigo.studio.impl.source.dsl.entity.DslEntity;
@@ -60,7 +59,7 @@ public final class DynamoSketchFactory implements DslSketchFactory {
 				return sketchFactories
 						.stream()
 						.flatMap(sketchFactory -> sketchFactory.getGrammar().getEntities().stream())
-						.collect(Collectors.toList());
+						.toList();
 			}
 
 			@Override
@@ -68,7 +67,7 @@ public final class DynamoSketchFactory implements DslSketchFactory {
 				return sketchFactories
 						.stream()
 						.flatMap(sketchFactory -> sketchFactory.getGrammar().getRootRaws().stream())
-						.collect(Collectors.toList());
+						.toList();
 			}
 		};
 	}
